# delphi

./: .env-example  .gitignore  README.md  app.py  pyproject.toml
.cursor/rules/: code-patterns.mdc  delphi-project-overview.mdc  development-workflow.mdc  mcp-integration.mdc
llms/: README.md  llm_cli.py
